test/fixtures/astRegression/shouldFail/return/ReturnExpression.sand
pub class ReturnExpression {
    x(return;)
}